# api_yamdb

./: .gitignore  README.md  pyproject.toml  requirements.txt
api_yamdb/api/: admin.py  filters.py  mixins.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
api_yamdb/api/management/commands/: import_data.py
api_yamdb/api/migrations/: 0001_initial.py  0002_auto_20241015_1455.py  0002_auto_20241017_1124.py  0003_auto_20241015_1637.py  0004_auto_20241018_1618.py  0005_rename_genre_title_genres.py  0006_alter_title_genres.py
api_yamdb/api_yamdb/: settings.py  urls.py
api_yamdb/reviews/: admin.py  constants.py  models.py  validators.py
api_yamdb/reviews/management/commands/: import_data.py
api_yamdb/reviews/migrations/: 0001_initial.py  0002_auto_20241022_2022.py  0002_auto_20241028_1113.py  0002_auto_20241031_1614.py  0002_auto_20241101_2114.py  0002_comment_title.py  0002_comment_title_id.py  0003_auto_20241022_2028.py  0003_auto_20241028_1151.py  0003_rename_title_id_comment_title.py  0004_alter_comment_title.py  0004_auto_20241028_1206.py  0005_auto_20241028_1251.py  0006_auto_20241028_1302.py
api_yamdb/users/: admin.py  constants.py  models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
api_yamdb/users/migrations/: 0001_initial.py  0002_alter_customuser_username.py  0002_alter_user_role.py  0002_auto_20241021_1031.py  0002_auto_20241023_1742.py  0002_auto_20241025_1120.py  0003_auto_20241025_1142.py  0004_alter_customuser_email.py  0005_alter_customuser_username.py
