[project]
name = 'YaMDb'
version = '0.1.0'
description = 'The YaMDb project collects users feedback on various content'
readme = 'README.md'
requires-python = '==3.9.13'
dependencies = [
    'requests==2.26.0',
    'Django==3.2',
    'djangorestframework==3.12.4',
    'PyJWT==2.1.0',
    'pytest==6.2.4',
    'pytest-django==4.4.0',
    'pytest-pythonpath==0.7.3',
    'django-filter==23.5',
    "djangorestframework-simplejwt>=5.3.1",
]

[tool.ruff]
target-version = 'py39'
line-length = 79
fix = true

[tool.ruff.format]
quote-style = 'single'
docstring-code-format = true

[tool.isort]
known_local_folder = ['posts', 'api']
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'LOCALFOLDER']
